testsuite/tests/ghci/should_run/Foo.hs
module Foo where

test :: IO Int
test = return 1
