testsuite/tests/ghci/should_fail/T11596S.hs
module T11596S where

test :: IO ()
test = putStrLn "Hello"
